Updating Perfect specific content to Sprout

--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -76,7 +76,7 @@
         "src": get_asset_url("../images/phone.png"),
         "alt": "Mobile phone"
       },
-      cta_banner_content="<h2>Download Perfect Today!</h2><p>Leverage the intuitive super awesome software that saves you time and will help grow your business.</p>",
+      cta_banner_content="<h2>Download Sprout Today!</h2><p>Leverage the intuitive super awesome software that saves you time and will help grow your business.</p>",
       cta_button="782d9df3-4dc5-44dc-81ad-a0efffcf0cb2"
     %}
 
