--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -156,7 +156,7 @@
                   <div style="text-align: center;">
                       <h3 style="color: #fff;">Email</h3>
                       <p style="color: #fff;"><strong>Our Nasvhille Office:</strong></p>
-                      <p style="color: #fff;">contact@perfect.co</p>
+                      <p style="color: #fff;">contact@sprout.co</p>
                   </div>
                   {% end_module_attribute %}
               {% end_dnd_module %}
