--- a/src/templates/home-page.html
+++ b/src/templates/home-page.html
@@ -30,7 +30,7 @@
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
-              <h1>Perfect Saves Time.</h1>
+              <h1>Sprout Saves Time.</h1>
               <p>Leverage the intuitive super awesome software that saves you time and will help grow your business.</p>
             </div>
           {% end_module_attribute %}
