--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -11,10 +11,10 @@
         path="@hubspot/logo",
         img={
           "override_inherited_src": true,
-          "src": get_asset_url("../../images/logo.png"),
+          "src": get_asset_url("../../images/sprout-logo.png"),
+          "alt": "Sprout Logo",
           "width": "205",
-          "alt": "Perfect Logo",
-          "size_type": "auto"
+          "height": "82"
         }
       %}
     </div>
