Updating logo image

--- a/src/templates/landing-page.html
+++ b/src/templates/landing-page.html
@@ -38,7 +38,7 @@
             flexbox_positioning="MIDDLE_CENTER",
             img={
               "override_inherited_src": true,
-              "src": get_asset_url("../images/sprout-logo.png"),
+              "src": get_asset_url("../images/sprout-theme-logo.png"),
               "alt": "Sprout Logo",
               "width": "205",
               "height": "82"
