--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -14,7 +14,7 @@
                 path="@hubspot/logo",
                 img={
                   "override_inherited_src": true,
-                  "src": get_asset_url("../../images/sprout-logo.png"),
+                  "src": get_asset_url("../../images/sprout-theme-logo.png"),
                   "alt": "Sprout Logo",
                   "width": "205",
                   "height": "82"
