Adding alternative text to images on pillar page

--- a/src/templates/pillar-page.html
+++ b/src/templates/pillar-page.html
@@ -146,7 +146,7 @@
             width=4,
             img={
               "src": get_asset_url("../images/pillar-two.jpg"),
-              "alt": "Computer and phone",
+              "alt": "Notebook with to do list",
               "size_type": "auto"
             }
           %}
@@ -175,7 +175,7 @@
             width=4,
             img={
               "src": get_asset_url("../images/pillar-three.jpg"),
-              "alt": "Woman typing on computer",
+              "alt": "Two women working on a project on a computer",
               "size_type": "auto"
             }
           %}
@@ -228,7 +228,7 @@
             width=4,
             img={
               "src": get_asset_url("../images/pillar-four.jpg"),
-              "alt": "Computer and phone",
+              "alt": "A paper with charts and graphs",
               "size_type": "auto"
             }
           %}
