Add cms-hub-website-theme-access scoping to templates and modules

--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -2,6 +2,8 @@
   templateType: blog
   isAvailableForNewContent: true
   label: Blog Post
+  scopes:
+    - cms-hub-website-theme-access
 -->
 {% extends "./layouts/base.html" %}
 
