--- a/src/templates/landing-page.html
+++ b/src/templates/landing-page.html
@@ -2,6 +2,8 @@
   templateType: page
   isAvailableForNewContent: true
   label: Landing Page
+  scopes:
+    - cms-hub-website-theme-access
 -->
 {% extends "./layouts/base.html" %}
 
