--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -1,6 +1,8 @@
 <!--
   templateType: global_partial
   label: Page Footer
+  scopes:
+    - cms-hub-website-theme-access
 -->
 <footer class="footer">
   <div class="footer__container">
