--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -1,6 +1,8 @@
 <!--
   templateType: global_partial
   label: Page Header
+  scopes:
+    - cms-hub-website-theme-access
 -->
 <header class="header">
   <div class="header__container">
