--- a/src/templates/system/500.html
+++ b/src/templates/system/500.html
@@ -2,6 +2,8 @@
   templateType: error_page
   isAvailableForNewContent: true
   label: 500 Error Page
+  scopes:
+    - cms-hub-website-theme-access
 -->
 {% extends "../layouts/base.html" %}
 
