--- a/src/templates/system/backup_unsubscribe.html
+++ b/src/templates/system/backup_unsubscribe.html
@@ -2,6 +2,8 @@
   templateType: email_backup_unsubscribe_page
   isAvailableForNewContent: true
   label: Email Backup Unsubscribe Page
+  scopes:
+    - cms-hub-website-theme-access
 -->
 {% extends "../layouts/base.html" %}
 
