--- a/src/templates/system/password_prompt.html
+++ b/src/templates/system/password_prompt.html
@@ -2,6 +2,8 @@
   templateType: password_prompt_page
   isAvailableForNewContent: true
   label: Password Prompt Page
+  scopes:
+    - cms-hub-website-theme-access
 -->
 {% extends "../layouts/base.html" %}
 
