--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -2,6 +2,8 @@
   templateType: blog
   isAvailableForNewContent: true
   label: Blog Listing
+  scopes:
+    - cms-hub-website-theme-access
 -->
 {% extends "./layouts/base.html" %}
 
