--- a/src/templates/system/search_results.html
+++ b/src/templates/system/search_results.html
@@ -2,6 +2,8 @@
   templateType: search_results_page
   isAvailableForNewContent: true
   label: Search Results Page
+  scopes:
+    - cms-hub-website-theme-access
 -->
 {% extends "../layouts/base.html" %}
 
