--- a/src/templates/system/subscription_preferences.html
+++ b/src/templates/system/subscription_preferences.html
@@ -2,6 +2,8 @@
   templateType: email_subscription_preferences_page
   isAvailableForNewContent: true
   label: Email Subscription Preferences Page
+  scopes:
+    - cms-hub-website-theme-access
 -->
 {% extends "../layouts/base.html" %}
 
