--- a/src/templates/system/subscriptions_confirmation.html
+++ b/src/templates/system/subscriptions_confirmation.html
@@ -2,6 +2,8 @@
   templateType: email_subscriptions_confirmation_page
   isAvailableForNewContent: true
   label: Email Subscriptions Confirmation Page
+  scopes:
+    - cms-hub-website-theme-access
 -->
 {% extends "../layouts/base.html" %}
 
