Fixing form width issue

--- a/src/templates/pillar-page.html
+++ b/src/templates/pillar-page.html
@@ -307,8 +307,7 @@
           {% dnd_module
             path="@hubspot/form",
             offset=6,
-            width=6,
-            flexbox_positioning="TOP_CENTER"
+            width=6
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
