--- a/src/templates/pillar-page.html
+++ b/src/templates/pillar-page.html
@@ -50,8 +50,8 @@
           %}
             {% module_attribute "html" %}
               <div>
-                <h2>Learn All About Automation</h2>
                 <p>Automation can be an incredible tool that can help increase your productivity. Not having to worry about the small things allows you to focus on the bigger and more important things.</p>
+                <p>Whether you are a small business or a large corporation, automation can be a key tool to helping your company grow. Some of the benefits of automation include increasing efficiency, improving productivity, and lowering costs. Before creating automation for the sake of automation, it is important to have an automation plan. Read more below on how you can start using automation for your business.</p>
               </div>
             {% end_module_attribute %}
           {% end_dnd_module %}
@@ -281,35 +281,41 @@
     %}
       {% dnd_column %}
         {% dnd_row %}
-          {% dnd_module path="@hubspot/rich_text" %}
-            {% module_attribute "html" %}
-              <h2 style="color: #FFFFFF;">Download Our Free Ebook</h2>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-        {% dnd_row %}
-          {% dnd_module
-            path="@hubspot/rich_text",
+          {% dnd_column
             offset=0,
             width=6
           %}
-            {% module_attribute "html" %}
-              <div>
-                <p style="color: #FFFFFF;">Discover 10 ways that you can use automation to help increase your productivity. This includes:</p>
-                <ul style="color: #FFFFFF;">
-                  <li>A free copy of our extensive eBook guide with tips on how you can increase your productivity by automating your daily tasks.</li>
-                  <li>An exclusive link to our online community so that you can discuss what you learn with a group of like-minded individuals.</li>
-                  <li>An extended free trial of our software so that you can immediately put some of these tips into action.</li>
-                </ul>
-              </div>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-          {% dnd_module
-            path="@hubspot/form",
+            {% dnd_row %}
+              {% dnd_module path="@hubspot/rich_text" %}
+                {% module_attribute "html" %}
+                  <h2 style="color: #FFFFFF;">Download Our Free Ebook</h2>
+                {% end_module_attribute %}
+              {% end_dnd_module %}
+            {% end_dnd_row %}
+            {% dnd_row %}
+              {% dnd_module path="@hubspot/rich_text" %}
+                {% module_attribute "html" %}
+                  <div>
+                    <p style="color: #FFFFFF;">Discover 10 ways that you can use automation to help increase your productivity. This includes:</p>
+                    <ul style="color: #FFFFFF;">
+                      <li>A free copy of our extensive eBook guide with tips on how you can increase your productivity by automating your daily tasks.</li>
+                      <li>An exclusive link to our online community so that you can discuss what you learn with a group of like-minded individuals.</li>
+                      <li>An extended free trial of our software so that you can immediately put some of these tips into action.</li>
+                    </ul>
+                  </div>
+                {% end_module_attribute %}
+              {% end_dnd_module %}
+            {% end_dnd_row %}
+          {% end_dnd_column %}
+          {% dnd_column
             offset=6,
             width=6
           %}
-          {% end_dnd_module %}
+            {% dnd_row %}
+              {% dnd_module path="@hubspot/form" %}
+              {% end_dnd_module %}
+            {% end_dnd_row %}
+          {% end_dnd_column %}
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
