--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -4,6 +4,7 @@
   label: Blog Listing
   scopes:
     - cms-hub-website-theme-access
+  screenshotPath: ../images/template-previews/blog-index.png
 -->
 {% extends "./layouts/base.html" %}
 
