--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -4,6 +4,7 @@
   label: Pricing Page
   scopes:
     - cms-hub-website-theme-access
+  screenshotPath: ../images/template-previews/pricing.png
 -->
 {% extends "./layouts/base.html" %}
 
