--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -4,6 +4,7 @@
   label: About Page
   scopes:
     - cms-hub-website-theme-access
+  screenshotPath: ../images/template-previews/about.png
 -->
 {% extends "./layouts/base.html" %}
 
