--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -4,6 +4,7 @@
   label: Blog Post
   scopes:
     - cms-hub-website-theme-access
+  screenshotPath: ../images/template-previews/blog-post.png
 -->
 {% extends "./layouts/base.html" %}
 
