--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -4,6 +4,7 @@
   label: Contact Page
   scopes:
     - cms-hub-website-theme-access
+  screenshotPath: ../images/template-previews/contact.png
 -->
 {% extends "./layouts/base.html" %}
 
