--- a/src/templates/home-page.html
+++ b/src/templates/home-page.html
@@ -4,6 +4,7 @@
   label: Home Page
   scopes:
     - cms-hub-website-theme-access
+  screenshotPath: ../images/template-previews/home-page.png
 -->
 {% extends "./layouts/base.html" %}
 
