--- a/src/templates/pillar-page.html
+++ b/src/templates/pillar-page.html
@@ -1,6 +1,10 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
+  label: Pillar Page
+  screenshotPath: ../images/template-previews/pillar-page.png
+  scopes:
+    - cms-hub-website-theme-access
 -->
 {% extends "./layouts/base.html" %}
 
