Module names are case sensitive

--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -27,7 +27,7 @@
             {# Social Follow #}
             <div class="footer__follow-me">
               {% module "footer_social"
-                path="../../modules/Social Follow",
+                path="../../modules/Social follow",
                 social_links=[
                   {"social_account": "facebook-f"},
                   {"social_account": "linkedin-in"},
