--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -29,7 +29,7 @@
         </label>
         <div class="header__navigation">
           {% module "header_navigation_primary"
-            path="../../modules/Menu Section",
+            path="../../modules/Menu section",
             label="Primary Navigation"
           %}
         </div>
