--- a/src/css/_header.css
+++ b/src/css/_header.css
@@ -1,6 +1,8 @@
 /* Header Container */
 
 .header {
+  position: absolute;
+  width: 100%;
   background-color: {{ get_theme_style_setting('header_group.header.header_bg_color.color') }};
 }
 
