--- a/src/templates/home-page.html
+++ b/src/templates/home-page.html
@@ -32,17 +32,39 @@
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
-              <h1>Sprout Saves Time.</h1>
+              <h1>Smart Decisions start with Smart Data</h1>
               <p>Leverage the intuitive super awesome software that saves you time and will help grow your business.</p>
             </div>
           {% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
         {% dnd_row %}
-          {% dnd_module path="../modules/Button",
-            flexbox_positioning="MIDDLE_CENTER",
-            button_link="#",
-            button_text="Free Trial"
+          {% dnd_module path="@hubspot/cta"
+            horizontal_alignment="CENTER"
+          %}
+            {% module_attribute "guid" %}{{ get_theme_style_setting('settings.home_cta_guid') }}{% end_module_attribute %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+      {% end_dnd_column %}
+    {% end_dnd_section %}
+
+    {# Testimonial Section #}
+    {% dnd_section
+      padding={"top": 125, "bottom": 125, "left": 0, "right": 0}
+      background_image={
+        "backgroundPosition": "MIDDLE_CENTER",
+        "backgroundSize": "cover",
+        "imageUrl": get_asset_url("../images/diamond-background.jpg")
+      },
+    %}
+      {% dnd_column %}
+        {% dnd_row padding={"top": 0, "bottom": 0, "left": 0, "right": 0} %}
+          {% dnd_module
+            path="../modules/Testimonial",
+            testimonial_image={
+                "src": get_asset_url("../images/bryan_headshot.png"),
+                "alt": "Bryan Cooper"
+            }
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
@@ -287,76 +309,6 @@
       {% end_dnd_section %}
 
 
-    {# Testimonial Section #}
-    {% dnd_section
-      background_image={
-        "backgroundPosition": "MIDDLE_CENTER",
-        "backgroundSize": "cover",
-        "imageUrl": get_asset_url("../images/testimonials-banner.png")
-      }
-    %}
-      {% dnd_column %}
-        {% dnd_row
-          padding={
-            "top": 0,
-            "bottom": 40,
-            "left": 0,
-            "right": 0
-          }
-         %}
-          {% dnd_module path="@hubspot/rich_text",
-            flexbox_positioning="TOP_CENTER"
-          %}
-            {% module_attribute "html" %}
-              <div style="text-align: center;">
-                <h2 style="color: #FFFFFF;">What People Are Saying</h2>
-              </div>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-        {% dnd_row %}
-          {% dnd_module
-            path="../modules/Testimonial",
-            offset=0,
-            width=4,
-            flexbox_positioning="MIDDLE_CENTER",
-            testimonial_title="Wow, this is amazing!",
-            testimonial_name="Jim Robbins"
-            testimonial_image={
-                "src": get_asset_url("../images/jim.png"),
-                "alt": "Jim Robbins"
-            }
-          %}
-          {% end_dnd_module %}
-          {% dnd_module
-            path="../modules/Testimonial",
-            offset=4,
-            width=4,
-            flexbox_positioning="MIDDLE_CENTER",
-            testimonial_title="Awesome product!",
-            testimonial_name="Dawn Doe"
-            testimonial_image={
-                "src": get_asset_url("../images/dawn.png"),
-                "alt": "Dawn Doe"
-            }
-          %}
-          {% end_dnd_module %}
-          {% dnd_module
-            path="../modules/Testimonial",
-            offset=8,
-            width=4,
-            flexbox_positioning="MIDDLE_CENTER",
-            testimonial_title="Incredible support!",
-            testimonial_name="Alan Dixon"
-            testimonial_image={
-                "src": get_asset_url("../images/alan.png"),
-                "alt": "Alan Dixon"
-            }
-          %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-      {% end_dnd_column %}
-    {% end_dnd_section %}
 
     {# Logo Section #}
     {% dnd_section %}
