--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -11,10 +11,10 @@
         path="@hubspot/logo",
         img={
           "override_inherited_src": true,
-          "src": get_asset_url("../../images/sprout-theme-logo.png"),
+          "src": get_asset_url("../../images/biglytics-logo.png"),
           "alt": "Sprout Logo",
-          "width": "205",
-          "height": "82"
+          "width": "203",
+          "height": "27"
         }
       %}
     </div>
