Fixing issue with blog settings

--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -45,8 +45,8 @@
                 </div>
               </div>
               <div class="blog-card__body">
-                {% if content.post_list_summary_featured_image %}
-                  <a class="blog-card__image" style="background-image: url('{{ content.post_list_summary_featured_image }}')"; href="{{ content.absolute_url }}"></a>
+                {% if content.featured_image and content_group.use_featured_image_in_summary %}
+                  <a class="blog-card__image" style="background-image: url('{{ content.featured_image }}')"; href="{{ content.absolute_url }}"></a>
                 {% endif %}
                 <div class="blog-card__content">
                   {% if content.tag_list %}
