Prefixing blog and system templates with theme name

--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -1,7 +1,7 @@
 <!--
   templateType: blog
   isAvailableForNewContent: true
-  label: Blog Listing
+  label: Sprout - blog index
   screenshotPath: ../images/template-previews/blog-index.png
 -->
 {% extends "./layouts/base.html" %}
