--- a/src/templates/system/backup_unsubscribe.html
+++ b/src/templates/system/backup_unsubscribe.html
@@ -1,7 +1,7 @@
 <!--
   templateType: email_backup_unsubscribe_page
   isAvailableForNewContent: true
-  label: Email Backup Unsubscribe Page
+  label: Sprout - email backup unsubscribe
 -->
 {% extends "../layouts/base.html" %}
 
