--- a/src/templates/system/search_results.html
+++ b/src/templates/system/search_results.html
@@ -1,7 +1,7 @@
 <!--
   templateType: search_results_page
   isAvailableForNewContent: true
-  label: Search Results Page
+  label: Sprout - search results
 -->
 {% extends "../layouts/base.html" %}
 
