--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -1,7 +1,7 @@
 <!--
   templateType: blog
   isAvailableForNewContent: true
-  label: Blog Post
+  label: Sprout - blog post
   screenshotPath: ../images/template-previews/blog-post.png
 -->
 {% extends "./layouts/base.html" %}
