--- a/src/templates/system/subscription_preferences.html
+++ b/src/templates/system/subscription_preferences.html
@@ -1,7 +1,7 @@
 <!--
   templateType: email_subscription_preferences_page
   isAvailableForNewContent: true
-  label: Email Subscription Preferences Page
+  label: Sprout - email subscription preferences
 -->
 {% extends "../layouts/base.html" %}
 
